--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  rxdart: ^0.22.0
+  rxdart: 
   http:
   image_picker:
   mime_type:
   shared_preferences:
   font_awesome_flutter: ^8.5.0
   timeago: ^2.0.26
+  toast: ^0.1.5
   
 
 dev_dependencies:
