--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   timeago: ^2.0.26
   toast: ^0.1.5
+  flutter_map: any
+  latlong: ^0.6.1
+  geolocator: ^5.3.2+2
   
 
 dev_dependencies:
